<?xml version="1.0" encoding="utf-8"?>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/profile_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/user_info_area"
            android:orientation="horizontal"
            android:layout_weight="14">

            <ImageView
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:src="@drawable/defaultuser"
                android:id="@+id/profile_pic"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/user_info_text_area"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/user_name"
                    android:textSize="24sp"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="5dp"
                    android:layout_marginStart="5dp"/>

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:id="@+id/edit_bio_button"
                    android:src="@drawable/editbutton"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginRight="10dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textColor="#a6a6a6"
                    android:layout_below="@+id/user_name"
                    android:id="@+id/user_title"
                    android:layout_marginLeft="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/user_title"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_marginBottom="10dp"
                    android:id="@+id/user_bio"
                    android:textSize="20sp" />

            </RelativeLayout>

        </LinearLayout>



        <android.support.design.widget.TabLayout
            android:id="@+id/tab_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="80dp"
            android:background="#a6a6a6"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

        <android.support.v4.view.ViewPager
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/pager"
            android:background="#ffffcc"
            android:layout_weight="6"/>

        <include layout="@layout/bottom_bar" />



    </LinearLayout>



