<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/kudos_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/give_kudos_button_layout"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/give_kudos_button"
            android:layout_centerHorizontal="true"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="50dp"
            android:paddingRight="50dp"
            android:layout_marginBottom="20dp"
            android:textSize="30sp"
            android:text="@string/give_kudos_label"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#d9d9d9"
            android:layout_below="@+id/give_kudos_button"/>


    </RelativeLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/kudos_list"
        android:layout_below="@+id/give_kudos_button_layout"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"/>

</RelativeLayout>